--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Parcial 3 - Integrantes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div id="navbar-container"></div>
-<script>
-fetch("navbar.html")
-    .then(response => response.text())
-    .then(data => {
-        document.getElementById("navbar-container").innerHTML = data;
-    });
-</script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="navbar-container"></div>
+    <script>
+      fetch("navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar-container").innerHTML = data;
+        });
+    </script>
 
-<div class="container mt-5">
-    <h1 class="text-center">Parcial 3</h1>
-    <h3 class="text-center text-muted">Integrantes</h3>
+    <div class="container mt-5">
+      <h1 class="text-center">Parcial 3</h1>
+      <h3 class="text-center text-muted">Integrantes</h3>
 
-    <div class="mt-4 p-4 border rounded shadow-sm">
-
+      <div class="mt-4 p-4 border rounded shadow-sm">
         <p class="text-center"><strong>Integrantes del grupo:</strong></p>
 
         <ul class="list-group">
-            <li class="list-group-item">• Integrante 1</li>
-            <li class="list-group-item">• Integrante 2</li>
-            <li class="list-group-item">• Integrante 3</li>
-            <li class="list-group-item">• Integrante 4</li>
+          <li class="list-group-item">• Jose Barahona</li>
+          <li class="list-group-item">• Ruben Spagnuolo</li>
+          <li class="list-group-item">• Supremo Kaio-sama</li>
         </ul>
-
+      </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
