--- a/calificacion.html
+++ b/calificacion.html
@@ -21,28 +21,66 @@ fetch("navbar.html")
     <form class="mt-4">
         <div class="mb-3">
             <label class="form-label">Parcial 1</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="p1">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Parcial 2</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="p2">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Parcial 3</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="p3">
         </div>
 
-        <div class="mb-3">
-            <label class="form-label">Semestral</label>
-            <input type="number" class="form-control">
-        </div>
-
-        <button class="btn btn-primary">Calcular</button>
+        <button class="btn btn-primary" id="boton" type="button">Calcular</button>
     </form>
 </div>
+<br><br>
+<div class="container mt-4">
+    <ul>
+        <li>Nota de semestral necesario para sacar A: <div id="A"></div></li> <br>
+        <li>Nota de semestral necesario para sacar B: <div id="B"></div></li> <br>
+        <li>Nota de semestral necesario para sacar C: <div id="C"></div></li> <br>
+        <li>Nota de semestral necesario para sacar D: <div id="D"></div></li> <br>
+        <li>Nota de semestral mayor de F: <div id="F"></div></li>
+    </ul>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    const boton = document.getElementById("boton");
+    boton.addEventListener("click", function() {
+        let p1; let p2; let p3; let sum;
+        let A; //no se necesita declarar todo individualmente ya que simplemente se puede restar por 10 continuamente del de "A"
+        if (document.getElementById("p1").value === "" || document.getElementById("p2").value === "" || document.getElementById("p3").value === "") {
+            alert("Todos los inputs debe tener valores ingresados!")
+            return;
+        }
+        if (document.getElementById("p1").value < 0 || document.getElementById("p2").value < 0 || document.getElementById("p3").value < 0) {
+            alert("No se puede ingresar valores negativos!")
+            return;
+        }
+        if (document.getElementById("p1").value > 100 || document.getElementById("p2").value > 100 || document.getElementById("p3").value > 100) {
+            alert("Los parciales no pueden tener calificación mayor que 100!")
+            return;
+        }
+        p1 = parseInt(document.getElementById("p1").value);
+        p2 = parseInt(document.getElementById("p2").value);
+        p3 = parseInt(document.getElementById("p3").value);
+        sum = (p1 + p2 + p3) / 3 * 0.4;
+        A = (91 - sum) / 0.6;
+        document.getElementById("A").textContent = verificar(A);
+        document.getElementById("B").textContent = verificar(A - 10);
+        document.getElementById("C").textContent = verificar(A - 20);
+        document.getElementById("D").textContent = verificar(A - 30);
+        document.getElementById("F").textContent = verificar(A - 31);
+    })
+    function verificar(nota) {
+        if(nota > 100){
+            return "No es posible sacar esta nota."
+        } else return nota;
+    }
+</script>
 </body>
 </html>
