--- a/numinverso.html
+++ b/numinverso.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Problema 3 - Invertir Número</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div id="navbar-container"></div>
-<script>
-fetch("navbar.html")
-    .then(response => response.text())
-    .then(data => {
-        document.getElementById("navbar-container").innerHTML = data;
-    });
-</script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="navbar-container"></div>
+    <script>
+      fetch("navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar-container").innerHTML = data;
+        });
+    </script>
 
-<div class="container mt-4">
-    <h1>Invertir un Número</h1>
+    <div class="container mt-4">
+      <h1>Invertir un Número</h1>
 
-    <form class="mt-4">
+      <form class="mt-4">
         <div class="mb-3">
-            <label class="form-label">Valor</label>
-            <input type="number" class="form-control">
+          <label class="form-label">Valor</label>
+          <input type="number" id="valor" class="form-control" />
         </div>
 
-        <button class="btn btn-primary">Invertir</button>
-    </form>
-</div>
+        <button class="btn btn-primary" id="invertir">Invertir</button>
+      </form>
+      <br /><br />
+      <div class="numeroinvertido" id="numeroinvertido">---</div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script/script.js"></script>
+  </body>
 </html>
