--- a/dia.html
+++ b/dia.html
@@ -21,13 +21,43 @@ fetch("navbar.html")
     <form class="mt-4">
         <div class="mb-3">
             <label class="form-label">Valor</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="dia">
         </div>
 
-        <button class="btn btn-primary">Determinar</button>
+        <button class="btn btn-primary" type="button" id="boton">Determinar</button>
     </form>
 </div>
+<br>
+<div class="container mt-4">
+    <H3>Día ingresado: </H3> <div id="strDia"></div>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    const boton = document.getElementById("boton");
+    boton.addEventListener("click", function(){
+        if (document.getElementById("dia").value === "") {
+            alert("Todos los inputs debe tener valores ingresados!")
+            return;
+        }
+        if (document.getElementById("dia").value < 1 || document.getElementById("dia").value > 366) {
+            alert("El valor ingresado debe ser entre [1,365]!")
+            return;
+        }
+        let dia = Number(document.getElementById("dia").value);
+        const meses = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]
+        let cont = 0;
+        let continuar = 0;
+        meses.forEach(element => {
+            if ((dia - element) > 1 && continuar == 0) {
+                dia -= element;
+                cont ++;
+            } else {
+                continuar = 1;
+            }
+        });
+        const mesNoms = ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"];
+        document.getElementById("strDia").textContent = dia.toString() + " de " + mesNoms[cont];
+    })
+</script>
 </body>
 </html>
