--- a/numinverso.html
+++ b/numinverso.html
@@ -34,6 +34,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="Scripts/problemaN3.js"></script>
   </body>
 </html>
